Fix code style + make buttons visibly toggleable

--- a/puppetboard/static/css/puppetboard.css
+++ b/puppetboard/static/css/puppetboard.css
@@ -232,7 +232,7 @@ textarea, /* query */
 pre.result,
 pre.error_message,
 td.error_message,
-tr.code {
+td.code {
   font-family: "Cousine", monospace;
   font-size: 1rem;
 }
